--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,4 +18,17 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           port: ${{ secrets.EC2_PORT }}
-          script: echo "This is user $(whoami)."
+          script: |
+            # --- install packages ---
+            sudo apt update -y && sudo apt install -y python3 python3-pip git
+
+            # --- clone repo ---
+            git clone https://github.com/professordiogodev/devops.flaskerino
+
+            # Install Python Dependencies
+            cd devops.flaskerino
+            pip3 install -r requirements.txt
+
+            # --- Create a systemd service ---
+            echo "creating service..."
+
